[gd_scene load_steps=31 format=3 uid="uid://bql38jl280n2v"]

[ext_resource type="Script" path="res://scripts/game/entities/enemies/bosses/shadowcat/root/shadowcat.gd" id="1_b13qf"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/bosses/shadowcat/slashAttack/direction.gd" id="2_ww752"]
[ext_resource type="Script" path="res://scripts/game/stateMachine/stateMachine.gd" id="3_qlbb0"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/bosses/shadowcat/states/follow/shadowcatFollow.gd" id="4_hfyi8"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/bosses/shadowcat/states/handAttack/shadowCatHandAttack.gd" id="5_7k644"]
[ext_resource type="PackedScene" uid="uid://bqhjmtojt74cb" path="res://scenes/game/entities/enemies/bosses/shadowcat/handAttack/shadowCatHandAttack.tscn" id="6_r1rd4"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/bosses/shadowcat/states/slashAttack/shadowCatSlashAttack.gd" id="7_i5iwf"]
[ext_resource type="PackedScene" uid="uid://d0xq8uv8usabh" path="res://scenes/game/entities/enemies/bosses/shadowcat/slashAttack/shadowCatSlashAttack.tscn" id="8_27chm"]
[ext_resource type="Shader" uid="uid://jig5yuqtndky" path="res://assets/shaders/hitFlash/shader/hitFlash.tres" id="10_v3gop"]
[ext_resource type="Texture2D" uid="uid://cv8j2g4teb7jd" path="res://assets/images/game/entities/enemies/bosses/shadowcat/follow/shadowcat1.png" id="11_tpv6w"]
[ext_resource type="Texture2D" uid="uid://6avhyremw5m8" path="res://assets/images/game/entities/enemies/bosses/shadowcat/follow/shadowcat2.png" id="12_qcc6k"]
[ext_resource type="Texture2D" uid="uid://dxrat15nskt1q" path="res://assets/images/game/entities/enemies/bosses/shadowcat/follow/shadowcat3.png" id="13_ocy3w"]
[ext_resource type="Texture2D" uid="uid://dbrffxabad5mw" path="res://assets/images/game/entities/enemies/bosses/shadowcat/follow/shadowcat4.png" id="14_owx10"]
[ext_resource type="Texture2D" uid="uid://5ybufwnyvqgn" path="res://assets/images/game/entities/enemies/bosses/shadowcat/handAttack/shadowcat_handAttack1.png" id="15_o3sga"]
[ext_resource type="Texture2D" uid="uid://mdoog8u1onu1" path="res://assets/images/game/entities/enemies/bosses/shadowcat/handAttack/shadowcat_handAttack2.png" id="16_0nlyk"]
[ext_resource type="Texture2D" uid="uid://d0v6lypy0v85q" path="res://assets/images/game/entities/enemies/bosses/shadowcat/handAttack/shadowcat_handAttack3.png" id="17_2fcha"]
[ext_resource type="Texture2D" uid="uid://bs6hb2mng68yj" path="res://assets/images/game/entities/enemies/bosses/shadowcat/idle/shadowCatIdle.png" id="18_60dff"]
[ext_resource type="Script" path="res://scripts/game/entities/components/healthComponent.gd" id="19_3a2p7"]
[ext_resource type="PackedScene" uid="uid://bjeomn7nw7vnr" path="res://scenes/game/entities/enemies/particles/shadowcatDeathParticle/shadowcatDeathParticle.tscn" id="20_ucn82"]
[ext_resource type="PackedScene" uid="uid://d2iyywv1qgbw3" path="res://scenes/game/entities/enemies/damageSound/enemyDamageSound.tscn" id="21_42ps6"]
[ext_resource type="Script" path="res://scripts/game/entities/components/hitboxComponent.gd" id="22_x3jjq"]
[ext_resource type="PackedScene" uid="uid://dpo7e5gsnvpxl" path="res://scenes/game/healthbar/healthbar.tscn" id="23_oyeuf"]
[ext_resource type="PackedScene" uid="uid://btksra2mv38rs" path="res://scenes/game/entities/components/damageIndicatorComponent.tscn" id="24_kk3m7"]
[ext_resource type="AudioStream" uid="uid://drc2njixypxbm" path="res://assets/audio/game/entities/enemies/bosses/shadowcat/handAttack/handAttackSound.wav" id="25_d87hq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6obfp"]
resource_local_to_scene = true
shader = ExtResource("10_v3gop")
shader_parameter/ENABLED = false
shader_parameter/tint = Color(0.941176, 0.964706, 0.941176, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_akcks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_tpv6w")
}, {
"duration": 1.0,
"texture": ExtResource("12_qcc6k")
}, {
"duration": 1.0,
"texture": ExtResource("13_ocy3w")
}, {
"duration": 1.0,
"texture": ExtResource("14_owx10")
}],
"loop": true,
"name": &"follow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_o3sga")
}, {
"duration": 1.0,
"texture": ExtResource("16_0nlyk")
}, {
"duration": 1.0,
"texture": ExtResource("17_2fcha")
}],
"loop": false,
"name": &"handAttackEnter",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_2fcha")
}, {
"duration": 1.0,
"texture": ExtResource("16_0nlyk")
}, {
"duration": 1.0,
"texture": ExtResource("15_o3sga")
}],
"loop": false,
"name": &"handAttackExit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_60dff")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3dinm"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/ENABLED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikiuk"]
resource_name = "hitFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/ENABLED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mewus"]
_data = {
"RESET": SubResource("Animation_3dinm"),
"hitAnim": SubResource("Animation_ikiuk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bojf"]
radius = 4.0
height = 26.0

[node name="shadowcat" type="CharacterBody2D" groups=["enemy"]]
texture_filter = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_b13qf")

[node name="direction" type="Node2D" parent="."]
script = ExtResource("2_ww752")

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("3_qlbb0")
initialState = NodePath("follow")

[node name="follow" type="Node" parent="stateMachine" node_paths=PackedStringArray("stateTimer")]
script = ExtResource("4_hfyi8")
moveSpeed = 70
stateTimer = NodePath("../stateTimer")

[node name="handAttack" type="Node" parent="stateMachine" node_paths=PackedStringArray("stateTimer")]
script = ExtResource("5_7k644")
handAttackScene = ExtResource("6_r1rd4")
stateTimer = NodePath("../stateTimer")

[node name="attackTimer" type="Timer" parent="stateMachine/handAttack"]
wait_time = 0.5

[node name="slashAttack" type="Node" parent="stateMachine" node_paths=PackedStringArray("direction")]
script = ExtResource("7_i5iwf")
direction = NodePath("../../direction")
slashAttackScene = ExtResource("8_27chm")

[node name="stateTimer" type="Timer" parent="stateMachine"]
wait_time = 5.0
one_shot = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_6obfp")
sprite_frames = SubResource("SpriteFrames_akcks")
animation = &"idle"

[node name="hitAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mewus")
}

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_0bojf")

[node name="health" type="Node2D" parent="." node_paths=PackedStringArray("healthBar")]
script = ExtResource("19_3a2p7")
maxHealth = 50
healthBar = NodePath("../healthBar")
deathParticleScene = ExtResource("20_ucn82")
damageSoundScene = ExtResource("21_42ps6")
enemyType = 10

[node name="hitbox" type="Area2D" parent="." node_paths=PackedStringArray("hitAnim", "health", "damageIndicator") groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("22_x3jjq")
hitAnim = NodePath("../hitAnim")
health = NodePath("../health")
damageIndicator = NodePath("../damageIndicatorComponent")

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_0bojf")

[node name="healthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("23_oyeuf")]
offset_left = -25.0
offset_top = 19.0
offset_right = 24.0
offset_bottom = 22.0
value = 0.0
health = NodePath("../health")

[node name="damageIndicatorComponent" parent="." instance=ExtResource("24_kk3m7")]
position = Vector2(1, -24)

[node name="handAttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_d87hq")

[connection signal="timeout" from="stateMachine/handAttack/attackTimer" to="stateMachine/handAttack" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="stateMachine/stateTimer" to="stateMachine/follow" method="_on_state_timer_timeout"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="sprite" to="stateMachine/handAttack" method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
